deploy: fb2402c6936a98082e1f6260f72dc1b579fbc025

--- a/man/print.html
+++ b/man/print.html
@@ -219,6 +219,7 @@ Commands:
   mdns                  Use mDNS utilities
   evaluate-compression  Evaluate which compression works best for file content
   get-free-port         Get a free port from the host OS. Optionally specify on which IP or a port range to scan for a free port
+  ssh                   SCP-like - Send to a target that might not have qft actively listening, authenticating over SSH and transferring over TCP
   help                  Print this message or the help of the given subcommand(s)
 
 Options:
@@ -255,84 +256,29 @@ ssh root@${REMOTE_HOSTNAME} -t "rauc install /${FIRMWARE}"
 Usage: qft evaluate-compression [OPTIONS] --input-file &lt;INPUT_FILE&gt;
 
 Options:
+Evaluate which compression works best for file content
+
+Usage: qft evaluate-compression [OPTIONS] --input-file &lt;INPUT_FILE&gt;
+
+Options:
   -i, --input-file &lt;INPUT_FILE&gt;
       --omit [&lt;OMIT&gt;...]                List of compression formats to omit from evaluation [possible values: bzip2, gzip, lz4, xz]
       --omit-levels [&lt;OMIT_LEVELS&gt;...]  List of compression levels to omit from evaluation
+  -j, --threads &lt;jobs&gt;                  The number of threads to use to evaluate compression (1 = sequential), the default is calculated from the available CPUs on the host [default: 14]
   -v, --verbose...                      Pass many times for more log output
-  -q, --quiet                           Silence all output [env: QFT_QUIET=]
+  -q, --quiet                           Silence all log output, this will lead to better performance [env: QFT_QUIET=]
       --color=&lt;WHEN&gt;                    [default: auto] [possible values: auto, always, never]
-  -h, --help                            Print help (see more with '--help')
+  -h, --help                            Print help (see more with '--help')                  Print help (see more with '--help')
 </code></pre>
+<h4 id="demo"><a class="header" href="#demo">Demo</a></h4>
+<div align=center>
+    <img src=www/evaluate_compression_demo.gif alt="evaluate-compression demo">
+</div>
+<h4 id="example-with-output"><a class="header" href="#example-with-output">Example with output</a></h4>
 <p>Evaluate compression of <code>Cargo.lock</code>. Omit <code>gzip</code> and most compression levels to make this example brief.</p>
 <pre><code class="language-shell">qft evaluate-compression --input-file Cargo.lock --omit gzip --omit-levels 0 2 3 4 5 6 7 8
 </code></pre>
-<p>Example output:</p>
-<pre><code class="language-shell">INFO Omitting:   Gzip
-INFO Evaluating: Bzip2 Lz4 Xz
-INFO Omitting compression levels (where applicable): 0 2 3 4 5 6 7 8
-INFO Buffered reading 34338 B contents in 15.728µs
-INFO Lz4
-╭────────────────────┬─────────────────────╮
-│ Compression Ratio  ┆        2.42:1       │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ Encode/decode time ┆   83.29µs/32.53µs   │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ Compressed Size    ┆ 13.83 KiB [14163 B] │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ % of Original      ┆        41.25%       │
-╰────────────────────┴─────────────────────╯
-INFO Bzip2
-╭────────────────────┬───────────────────╮
-│ Compression level  ┆         1         │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ Compression Ratio  ┆       4.56:1      │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ Encode/decode time ┆  2.36ms/686.34µs  │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ Compressed Size    ┆ 7.36 KiB [7533 B] │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ % of Original      ┆       21.94%      │
-╰────────────────────┴───────────────────╯
-INFO Bzip2
-╭────────────────────┬───────────────────╮
-│ Compression level  ┆         9         │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ Compression Ratio  ┆       4.56:1      │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ Encode/decode time ┆  2.73ms/771.13µs  │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ Compressed Size    ┆ 7.36 KiB [7533 B] │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ % of Original      ┆       21.94%      │
-╰────────────────────┴───────────────────╯
-INFO Xz
-╭────────────────────┬───────────────────╮
-│ Compression level  ┆         1         │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ Compression Ratio  ┆       3.73:1      │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ Encode/decode time ┆  2.34ms/522.16µs  │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ Compressed Size    ┆ 9.00 KiB [9216 B] │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ % of Original      ┆       26.84%      │
-╰────────────────────┴───────────────────╯
-INFO Xz
-╭────────────────────┬───────────────────╮
-│ Compression level  ┆         9         │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ Compression Ratio  ┆       4.30:1      │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ Encode/decode time ┆  9.04ms/523.23µs  │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ Compressed Size    ┆ 7.80 KiB [7984 B] │
-├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
-│ % of Original      ┆       23.25%      │
-╰────────────────────┴───────────────────╯
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-╭────────────────────┬───────────────────┬───────────────────────┬─────────────────────────╮
+<pre><code class="language-shell">╭────────────────────┬───────────────────┬───────────────────────┬─────────────────────────╮
 │                    ┆ Best Ratio        ┆ Best Compression Time ┆ Best Decompression Time │
 ╞════════════════════╪═══════════════════╪═══════════════════════╪═════════════════════════╡
 │ Format             ┆ Bzip2             ┆ Lz4                   ┆ Lz4                     │
