--- a/man/print.html
+++ b/man/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="chapter_2.html"><strong aria-hidden="true">1.1.</strong> Purpose</a></li><li class="chapter-item expanded "><a href="chapter_3.html"><strong aria-hidden="true">1.2.</strong> Features</a></li><li class="chapter-item expanded "><a href="chapter_4.html"><strong aria-hidden="true">1.3.</strong> Usage</a></li><li class="chapter-item expanded "><a href="chapter_5.html"><strong aria-hidden="true">1.4.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="chapter_6.html"><strong aria-hidden="true">1.4.1.</strong> Evaluate compression</a></li><li class="chapter-item expanded "><a href="chapter_7.html"><strong aria-hidden="true">1.4.2.</strong> mDNS utilities</a></li></ol></li><li class="chapter-item expanded "><a href="chapter_8.html"><strong aria-hidden="true">1.5.</strong> Supported compression formats</a></li><li class="chapter-item expanded "><a href="chapter_9.html"><strong aria-hidden="true">1.6.</strong> Install</a></li><li class="chapter-item expanded "><a href="chapter_10.html"><strong aria-hidden="true">1.7.</strong> Comparison/Benchmarks</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="chapter_2.html"><strong aria-hidden="true">1.1.</strong> Purpose</a></li><li class="chapter-item expanded "><a href="chapter_3.html"><strong aria-hidden="true">1.2.</strong> Features</a></li><li class="chapter-item expanded "><a href="chapter_4.html"><strong aria-hidden="true">1.3.</strong> Usage</a></li><li class="chapter-item expanded "><a href="chapter_5.html"><strong aria-hidden="true">1.4.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="chapter_6.html"><strong aria-hidden="true">1.4.1.</strong> Evaluate compression</a></li><li class="chapter-item expanded "><a href="chapter_7.html"><strong aria-hidden="true">1.4.2.</strong> mDNS utilities</a></li></ol></li><li class="chapter-item expanded "><a href="chapter_8.html"><strong aria-hidden="true">1.5.</strong> Supported compression formats</a></li><li class="chapter-item expanded "><a href="chapter_9.html"><strong aria-hidden="true">1.6.</strong> Installing</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="chapter_10.html"><strong aria-hidden="true">1.6.1.</strong> Prebuilt binaries</a></li><li class="chapter-item expanded "><a href="chapter_11.html"><strong aria-hidden="true">1.6.2.</strong> Removing features</a></li></ol></li><li class="chapter-item expanded "><a href="chapter_12.html"><strong aria-hidden="true">1.7.</strong> Comparison/Benchmarks</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -203,12 +203,15 @@
 <p>If you are worried about a man-in-the-middle, you can simply check your data on the receiving end before continuing. There should be no additional security concerns (if you disagree, please create an issue highlighting the concern).</p>
 <div style="break-before: page; page-break-before: always;"></div><h2 id="features"><a class="header" href="#features">Features</a></h2>
 <ul>
-<li>Send files via TCP by specifying either IP or mDNS/DNS-SD hostname</li>
+<li>Send files via TCP by specifying either IP or hostname (includes mDNS/DNS-SD)</li>
 <li>Evaluate <a href="chapter_8.html">supported compression formats</a> on your input data</li>
 <li>Discover, resolve, and/or register mDNS/DNS-SD services</li>
 <li>SCP like transfers <code>qft ssh FILES... &lt;user&gt;@&lt;host&gt;:&lt;path&gt;</code>. Where auth occurs via SSH but transfer is bare bone TCP.</li>
 <li>Shell completions for <code>bash</code>, <code>elvish</code>, <code>fish</code>, <code>powershell</code>, and <code>zsh</code>.</li>
 </ul>
+<blockquote>
+<p>All features are enabled by default, to disable features see the <a href="chapter_9.html">installing</a> section.</p>
+</blockquote>
 <div style="break-before: page; page-break-before: always;"></div><h2 id="usage"><a class="header" href="#usage">Usage</a></h2>
 <pre><code class="language-markdown">$ qft -h
 Usage: qft [OPTIONS] [COMMAND]
@@ -271,8 +274,8 @@ Options:
   -h, --help                            Print help (see more with '--help')                  Print help (see more with '--help')
 </code></pre>
 <h4 id="demo"><a class="header" href="#demo">Demo</a></h4>
-<div align=center>
-    <img src=www/evaluate_compression_demo.gif alt="evaluate-compression demo">
+<div align="center">
+    <img src="https://raw.githubusercontent.com/CramBL/quick-file-transfer/fb2402c6936a98082e1f6260f72dc1b579fbc025/www/evaluate_compression_demo.gif" alt="evaluate-compression demo">
 </div>
 <h4 id="example-with-output"><a class="header" href="#example-with-output">Example with output</a></h4>
 <p>Evaluate compression of <code>Cargo.lock</code>. Omit <code>gzip</code> and most compression levels to make this example brief.</p>
@@ -350,12 +353,25 @@ INFO Keeping alive for: 123.456s
 <li><input checked="" disabled="" type="checkbox"> lz4</li>
 <li><input checked="" disabled="" type="checkbox"> xz</li>
 </ul>
-<div style="break-before: page; page-break-before: always;"></div><h2 id="install"><a class="header" href="#install">Install</a></h2>
+<div style="break-before: page; page-break-before: always;"></div><h2 id="installing"><a class="header" href="#installing">Installing</a></h2>
 <p>Build from source (preferred if you have the Rust toolchain installed).</p>
 <pre><code class="language-shell">cargo install quick-file-transfer
 </code></pre>
-<h4 id="prebuilt-binaries"><a class="header" href="#prebuilt-binaries">Prebuilt binaries</a></h4>
+<div style="break-before: page; page-break-before: always;"></div><h3 id="prebuilt-binaries"><a class="header" href="#prebuilt-binaries">Prebuilt binaries</a></h3>
 <pre><code class="language-shell">curl --proto '=https' --tlsv1.2 -sSf https://crambl.github.io/quick-file-transfer/install.sh | bash -s -- --to &lt;DEST&gt;
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h3 id="removing-features"><a class="header" href="#removing-features">Removing features</a></h3>
+<p>There’s currently 3 features:</p>
+<ul>
+<li>mdns</li>
+<li>ssh</li>
+<li>evaluate-compression</li>
+</ul>
+<p>To install from source and disable them all, run:</p>
+<pre><code class="language-shell">cargo install quick-file-transfer --no-default-features
+</code></pre>
+<p>To enable the <code>ssh</code> and <code>mdns</code> features run:</p>
+<pre><code class="language-shell">cargo install quick-file-transfer --no-default-features --features ssh,mdns
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h2 id="comparisonbenchmarks"><a class="header" href="#comparisonbenchmarks">Comparison/Benchmarks</a></h2>
 <p>Benchmarks are done with <code>hyperfine</code> default settings.</p>
